--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,18 +2,19 @@
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Encrypter from "../components/Encrypter";
+import Decrypter from "../components/Decrypter";
 ---
 
 <Layout title="Twofish blockcipher">
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
+		<!-- <h1>Welcome to <span class="text-gradient">Astro</span></h1> -->
 
 		<div class="link-card-grid">
 			<Encrypter client:load client:only />
-			<Encrypter client:load client:only />
+			<Decrypter client:load client:only />
 		</div>
 
-		<p class="instructions">
+		<!-- <p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br
 			/>
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message
@@ -31,7 +32,7 @@ import Encrypter from "../components/Encrypter";
 				title="Src"
 				body="Interested in the twofish blockcipher? Learn more here!"
 			/>
-		</ul>
+		</ul> -->
 	</main>
 </Layout>
 
