--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,9 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Encrypter from "../components/Encrypter";
 import Decrypter from "../components/Decrypter";
+
+import '../styles/enc.css';
+import '../styles/dec.css';
 ---
 
 <Layout title="Twofish blockcipher">
