--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,5 @@
 /* NOTE: general card style */
-.enc-card {
+.card {
     --accent: 220, 20, 60;
     --accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #FA8072 30%, #2d3134 60%);
 
@@ -11,22 +11,22 @@
     background-size: 400%;
     border-radius: 0.5rem;
     border-color: #1d1f21;
-    border-width: 1px;
+    border-width: .1em;
     border-style: solid;
     background-position: 100%;
     transition: background-position 0.3s cubic-bezier(0.22, 1, 0.36, 1);
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
 }
 
-.enc-card:is(:hover, :focus-within) {
+.card:is(:hover, :focus-within) {
     background-position: 0%;
 }
 
-.enc-card:is(:hover, :focus-within) h1 {
+.card:is(:hover, :focus-within) h1 {
     color: rgb(var(--accent));
 }
 
-.enc-card>div {
+.card>div {
     color: #f6f6f6;
     background-color: #2d3134;
 
@@ -35,17 +35,16 @@
     line-height: 1.4;
     padding: 1rem 1.3rem;
     border-radius: 0.35rem;
-    opacity: 1;
 }
 
-.enc-card h1 {
+.card h1 {
     margin: 0;
     font-size: 2.25rem;
     transition: color 0.3s cubic-bezier(0.22, 1, 0.36, 1);
 }
 
 /* NOTE: drag and drop style */
-.enc-file-drop {
+.file-drop {
     margin-top: 1rem;
 
     list-style: none;
@@ -57,11 +56,11 @@
     background-position: 0;
 }
 
-.enc-file-drop:is(:hover, :focus-within)>div {
+.file-drop:is(:hover, :focus-within)>div {
     opacity: .8;
 }
 
-.enc-file-drop>div {
+.file-drop>div {
     width: 100%;
     text-decoration: none;
     line-height: 1.4;
@@ -73,28 +72,28 @@
     transition: opacity 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 }
 
-.enc-file-drop>div>p {
+.file-drop>div>p {
     text-align: center;
 }
 
-.enc-file-drop>div label {
+.file-drop>div label {
     text-decoration: underline 0.15em rgba(0, 0, 0, 0);
     transition: text-decoration-color 300ms;
     color: grey;
     transition: color 300ms;
 }
 
-.enc-file-drop>div label:is(:hover, :focus-within) {
+.file-drop>div label:is(:hover, :focus-within) {
     color: rgb(var(--accent));
     text-decoration-color: rgb(var(--accent));
 }
 
-#enc-file {
+.file {
     display: none;
 }
 
 /* NOTE: canvas style */
-#enc-image {
+.image {
     margin-top: 1rem;
     width: 100%;
     display: none;
@@ -102,7 +101,7 @@
 }
 
 /* NOTE: button holder */
-.enc-button-bar {
+.button-bar {
     margin-top: 1rem;
 
     display: grid;
@@ -111,7 +110,7 @@
     padding: 0;
 }
 
-.enc-button-bar>button {
+.button-bar>button {
     border: 0px;
     padding: .2rem;
     margin: 0px;
@@ -127,18 +126,18 @@
     transition: color 0.3s cubic-bezier(0.22, 1, 0.36, 1);
 }
 
-.enc-button-bar>button:is(:hover) {
+.button-bar>button:is(:hover) {
     background-color: rgb(var(--accent));
     color: #f6f6f6;
 }
 
-.enc-button-bar>button:is(:active) {
+.button-bar>button:is(:active) {
     background-color: #f6f6f6;
     color: #444;
 }
 
 /* NOTE: key input */
-#enc-key {
+.key {
     margin-top: .35rem;
     font-family: system-ui, sans-serif;
     padding: .2rem;
