--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import "../styles/overwrites.css";
 			<code>/api/decrypt</code> takes an object with <strong>key</strong> and <strong>ciphertext</strong> attributes and returns the decrypted data.
 			<br>
 			<br>
-			Both endpoints expect the <strong>plaintext/ciphertext</strong> to be in utf8 and they return the results in utf8.
+			Both endpoints expect the <strong>plaintext/ciphertext</strong> to be in base64 and they return the results in base64.
 			<b>DO NOT</b> use this for security as this demo is purely for academic demonstration purposes!
 		</p>
 
